--- a/WebApp/wwwroot/index.html
+++ b/WebApp/wwwroot/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>WebApp</title>
         <base href="/" />
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="main.css" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
         <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     </head>
